fixed responsiveness of related content container on mobile screens

--- a/src/styles/RelatedContent.module.scss
+++ b/src/styles/RelatedContent.module.scss
@@ -2,6 +2,7 @@
 
 .related_content {
   width: 95%;
+  margin: 0 auto;
 
   &__top {
     display: flex;
